[package]
name = "ROFL"
version = "0.1.0"
edition = "2021"


[dependencies]
unicorn-engine = "2.1.1"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0.125"
zstd = "0.13"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0.94"
log = "0.4"
fern = "0.7.1"
chrono = "0.4"
colored = "2.0"
zip = "2.2.2"
